# -chat_gpt_killer

LM_parser/: parser_model.py  parser_transitions.py
gpt_kernel/: advanced_model.py  load_models.ipynb  load_models.py  model_trainer.py  trainer.ipynb  transformer.py
gpt_kernel/models/: ru_eng_trans.pth
gpt_kernel/torch_cpp/: CMakeLists.txt  decoder.cpp  decoder.hpp  decoder_layer.cpp  decoder_layer.hpp  encoder.cpp  encoder.hpp  encoder_layer.cpp  encoder_layer.hpp  feed_forward.cpp  feed_forward.hpp  multi_head_attention.cpp  multi_head_attention.hpp  multi_head_cross_attention.cpp  multi_head_cross_attention.hpp  positional_enc.cpp  positional_enc.hpp  sentence_emb.cpp  sentence_emb.hpp  sequential_decoder.cpp  sequential_decoder.hpp  sequential_encoder.cpp  sequential_encoder.hpp  test.cpp  transformer.cpp  transformer.hpp  utils.cpp  utils.hpp
rest_server_c++/: CMakeLists.txt  model.py  server.cpp
site_translator/: db.sqlite3
site_translator/basic_translator/: apps.py  forms.py  urls.py  utils.py  views.py
site_translator/basic_translator/static/css/: background.css  main_mobile.css  main_pc.css
site_translator/basic_translator/templates/: background.css  base.html  index.html  main.css
site_translator/translator/: settings.py  urls.py
